# sdk-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  STYLE_GUIDE.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: dispatch-docs.yml  integration-test.yml  pr-and-push.yml  pypi-publish-on-release.yml  test-lint-pr.yml  test-lint.yml
src/strands/: __init__.py  _identifier.py
src/strands/agent/: __init__.py  agent.py  agent_result.py  state.py
src/strands/agent/conversation_manager/: __init__.py  conversation_manager.py  null_conversation_manager.py  sliding_window_conversation_manager.py  summarizing_conversation_manager.py
src/strands/event_loop/: __init__.py  _recover_message_on_max_tokens_reached.py  error_handler.py  event_loop.py  message_processor.py  streaming.py
src/strands/experimental/: __init__.py
src/strands/experimental/hooks/: __init__.py  events.py  registry.py
src/strands/handlers/: __init__.py  callback_handler.py  tool_handler.py
src/strands/hooks/: __init__.py  events.py  registry.py  rules.md
src/strands/models/: __init__.py  anthropic.py  bedrock.py  litellm.py  llamaapi.py  mistral.py  model.py  ollama.py  openai.py  sagemaker.py  writer.py
src/strands/multiagent/: __init__.py  base.py  graph.py  swarm.py
src/strands/multiagent/a2a/: __init__.py  agent.py  executor.py  server.py
src/strands/session/: __init__.py  file_session_manager.py  repository_session_manager.py  s3_session_manager.py  session_manager.py  session_repository.py
src/strands/telemetry/: __init__.py  config.py  metrics.py  metrics_constants.py  tracer.py
src/strands/tools/: __init__.py  _validator.py  decorator.py  executor.py  loader.py  registry.py  structured_output.py  thread_pool_executor.py  tools.py  watcher.py
src/strands/tools/executors/: __init__.py  _executor.py  concurrent.py  sequential.py
src/strands/tools/mcp/: __init__.py  mcp_agent_tool.py  mcp_client.py  mcp_instrumentation.py  mcp_types.py
src/strands/types/: __init__.py  _events.py  agent.py  citations.py  collections.py  content.py  event_loop.py  exceptions.py  guardrails.py  media.py  models.py  session.py  streaming.py  tools.py  traces.py
src/strands/types/models/: __init__.py  model.py  openai.py
tests/: conftest.py  test_llamaapi.py
tests-integ/: conftest.py  test_agent_async.py  test_bedrock_cache_point.py  test_bedrock_guardrails.py  test_hot_tool_reload_decorator.py  test_mcp_client.py  test_model_anthropic.py  test_model_bedrock.py  test_model_cohere.py  test_model_litellm.py  test_model_llamaapi.py  test_model_mistral.py  test_model_ollama.py  test_model_openai.py  test_model_writer.py  test_stream_agent.py  test_summarizing_conversation_manager_integration.py
tests/fixtures/: mock_hook_provider.py  mock_session_repository.py  mocked_model_provider.py
tests/multiagent/a2a/: conftest.py  test_agent.py  test_executor.py  test_server.py
tests/strands/: test_identifier.py
tests/strands/agent/: test_agent.py  test_agent_hooks.py  test_agent_result.py  test_agent_state.py  test_conversation_manager.py  test_summarizing_conversation_manager.py
tests/strands/agent/hooks/: test_agent_events.py
tests/strands/event_loop/: test_error_handler.py  test_event_loop.py  test_message_processor.py  test_recover_message_on_max_tokens_reached.py  test_streaming.py
tests/strands/experimental/hooks/: test_events.py  test_hook_registry.py
tests/strands/handlers/: test_callback_handler.py  test_tool_handler.py
tests/strands/mocked_model_provider/: test_agent_state_updates.py
tests/strands/models/: test_anthropic.py  test_bedrock.py  test_litellm.py  test_llamaapi.py  test_mistral.py  test_model.py  test_ollama.py  test_openai.py  test_sagemaker.py  test_writer.py
tests/strands/multiagent/: __init__.py  test_base.py  test_graph.py  test_swarm.py
tests/strands/multiagent/a2a/: __init__.py  test_executor.py  test_server.py
tests/strands/session/: __init__.py  test_file_session_manager.py  test_repository_session_manager.py  test_s3_session_manager.py
tests/strands/telemetry/: test_config.py  test_metrics.py  test_tracer.py
tests/strands/tools/: test_decorator.py  test_executor.py  test_loader.py  test_registry.py  test_structured_output.py  test_thread_pool_executor.py  test_tools.py  test_validator.py  test_watcher.py
tests/strands/tools/executors/: conftest.py  test_concurrent.py  test_executor.py  test_sequential.py
tests/strands/tools/mcp/: test_mcp_agent_tool.py  test_mcp_client.py  test_mcp_instrumentation.py
tests/strands/types/: test_session.py
tests/strands/types/models/: test_model.py  test_openai.py
tests_integ/: conftest.py  echo_server.py  test_bedrock_guardrails.py  test_context_overflow.py  test_function_tools.py  test_hot_tool_reload_decorator.py  test_max_tokens_reached.py  test_mcp_client.py  test_mcp_client_structured_content_with_hooks.py  test_multiagent_graph.py  test_multiagent_swarm.py  test_session.py  test_summarizing_conversation_manager_integration.py  test_tool_context_injection.py
tests_integ/models/: conformance.py  providers.py  test_conformance.py  test_model_anthropic.py  test_model_bedrock.py  test_model_cohere.py  test_model_litellm.py  test_model_llamaapi.py  test_model_mistral.py  test_model_ollama.py  test_model_openai.py  test_model_sagemaker.py  test_model_writer.py
tests_integ/tools/executors/: test_concurrent.py  test_sequential.py
